--- a/frontend/public/assets/css/user_show.css
+++ b/frontend/public/assets/css/user_show.css
@@ -13,6 +13,8 @@
 .user-show-content {
   display: flex; 
   justify-content: center;
+  /* border: 3px solid blue; */
+  margin-top: 40px;
 }
 
 .user-show-username {
